new code change

--- a/index1.html
+++ b/index1.html
@@ -1,54 +1,130 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>The Tribute Website | Netaji Subhas Chandra Bose</title>
-    <link rel="stylesheet" href="style1.css">
-</head>
-<body>
+    <link rel="stylesheet" href="style1.css" />
+  </head>
+  <body>
     <div class="container">
-        <div class="content">
-           <section class="top_section">
-             <div class="img_container">
-                 <img src="Subhas_Chandra.jpg" alt="tribute">
-             </div>
-             <div>
-                 <h1>Netaji<br> Subhas Chandra Bose</h1>
-                 <p>1897 - 1947</p>
-             </div>
-           </section>
-           <section class="middle_section">
-             <div>
-                 <h2>About Netaji Bose</h2>
-             </div>
-             <div class="about_section">
-                <p>Subhas Chandra Bose ( 23 January 1897 – 18 August 1945) was an Indian nationalist whose defiance of British authority in India made him a hero among many Indians, but his wartime alliances with Nazi Germany and Imperial Japan left a legacy vexed by authoritarianism, anti-Semitism, and military failure. The honorific Netaji (Hindi: "Respected Leader") was first applied to Bose in Germany in early 1942—by the Indian soldiers of the Indische Legion and by the German and Indian officials in the Special Bureau for India in Berlin. It is now used throughout India.
-                <br>
-                Subhas Bose was born into wealth and privilege in a large Bengali family in Orissa during the British Raj. The early recipient of an Anglocentric education, he was sent after college to England to take the Indian Civil Service examination. He succeeded with distinction in the vital first exam but demurred at taking the routine final exam, citing nationalism as a higher calling. Returning to India in 1921, Bose joined the nationalist movement led by Mahatma Gandhi and the Indian National Congress. He followed Jawaharlal Nehru to leadership in a group within the Congress which was less keen on constitutional reform and more open to socialism.[i] Bose became Congress president in 1938. After reelection in 1939, differences arose between him and the Congress leaders, including Gandhi, over the future federation of British India and princely states, but also because discomfort had grown among the Congress leadership over Bose's negotiable attitude to non-violence, and his plans for greater powers for himself. After the large majority of the Congress Working Committee members resigned in protest, Bose resigned as president and was eventually ousted from the party.
-                </p>
-             </div>
-           </section>
-           <section class="biog_section">
-             <h3>Biography</h3>
-            <ul>
-                <li><a href="https://en.wikipedia.org/wiki/Subhas_Chandra_Bose#1897%E2%80%931921:_Early_life">1897–1921: Early life</a></li>
-                <li><a href="https://en.wikipedia.org/wiki/Subhas_Chandra_Bose#1921%E2%80%931932:_Indian_National_Congress">1921–1932: Indian National Congress</a></li>
-                <li><a href="https://en.wikipedia.org/wiki/Subhas_Chandra_Bose#1933%E2%80%931937:_Illness,_Austria,_Emilie_Schenkl">1933–1937: Illness, Austria, Emilie Schenkl</a></li>
-                <li><a href="https://en.wikipedia.org/wiki/Subhas_Chandra_Bose#1937%E2%80%931940:_Indian_National_Congress">1937–1940: Indian National Congress</a></li>
-                <li><a href="https://en.wikipedia.org/wiki/Subhas_Chandra_Bose#1941:_Escape_to_Nazi_Germany">1941: Escape to Nazi Germany</a></li>
-                <li><a href="https://en.wikipedia.org/wiki/Subhas_Chandra_Bose#1941%E2%80%931943:_Collaboration_with_Nazi_Germany">1941–1943: Collaboration with Nazi Germany</a></li>
-                <li><a href="https://en.wikipedia.org/wiki/Subhas_Chandra_Bose#1943%E2%80%931945:_Japanese-occupied_Asia">1943–1945: Japanese-occupied Asia</a></li>
-                <li><a href="https://en.wikipedia.org/wiki/Subhas_Chandra_Bose#18_August_1945:_Death">18 August 1945: Death</a></li>
-            </ul>
-           </section>
-           <section class="footer">
-            <div>
-                <p>For more information about Netaji go to <a href="https://en.wikipedia.org/wiki/Subhas_Chandra_Bose#">wikipedia</a></p>
-            </div>
-            <h4>Thankyou visit again...</h4>
-           </section>
-        </div>
+      <div class="content">
+        <section class="top_section">
+          <div class="img_container">
+            <img src="Subhas_Chandra.jpg" alt="tribute" />
+          </div>
+          <div>
+            <h1>
+              Netaji<br />
+              Subhas Chandra Bose
+            </h1>
+            <p>1897 - 1947</p>
+          </div>
+        </section>
+        <section class="middle_section">
+          <div>
+            <h2>About Netaji Bose</h2>
+          </div>
+          <div class="about_section">
+            <p>
+              Subhas Chandra Bose ( 23 January 1897 – 18 August 1945) was an
+              Indian nationalist whose defiance of British authority in India
+              made him a hero among many Indians, but his wartime alliances with
+              Nazi Germany and Imperial Japan left a legacy vexed by
+              authoritarianism, anti-Semitism, and military failure. The
+              honorific Netaji (Hindi: "Respected Leader") was first applied to
+              Bose in Germany in early 1942—by the Indian soldiers of the
+              Indische Legion and by the German and Indian officials in the
+              Special Bureau for India in Berlin. It is now used throughout
+              India.
+              <br />
+              Subhas Bose was born into wealth and privilege in a large Bengali
+              family in Orissa during the British Raj. The early recipient of an
+              Anglocentric education, he was sent after college to England to
+              take the Indian Civil Service examination. He succeeded with
+              distinction in the vital first exam but demurred at taking the
+              routine final exam, citing nationalism as a higher calling.
+              Returning to India in 1921, Bose joined the nationalist movement
+              led by Mahatma Gandhi and the Indian National Congress. He
+              followed Jawaharlal Nehru to leadership in a group within the
+              Congress which was less keen on constitutional reform and more
+              open to socialism.[i] Bose became Congress president in 1938.
+              After reelection in 1939, differences arose between him and the
+              Congress leaders, including Gandhi, over the future federation of
+              British India and princely states, but also because discomfort had
+              grown among the Congress leadership over Bose's negotiable
+              attitude to non-violence, and his plans for greater powers for
+              himself. After the large majority of the Congress Working
+              Committee members resigned in protest, Bose resigned as president
+              and was eventually ousted from the party.
+            </p>
+          </div>
+        </section>
+        <section class="biog_section">
+          <h3>Biography</h3>
+          <ul>
+            <li>
+              <a
+                href="https://en.wikipedia.org/wiki/Subhas_Chandra_Bose#1897%E2%80%931921:_Early_life"
+                >1897–1921: Early life</a
+              >
+            </li>
+            <li>
+              <a
+                href="https://en.wikipedia.org/wiki/Subhas_Chandra_Bose#1921%E2%80%931932:_Indian_National_Congress"
+                >1921–1932: Indian National Congress</a
+              >
+            </li>
+            <li>
+              <a
+                href="https://en.wikipedia.org/wiki/Subhas_Chandra_Bose#1933%E2%80%931937:_Illness,_Austria,_Emilie_Schenkl"
+                >1933–1937: Illness, Austria, Emilie Schenkl</a
+              >
+            </li>
+            <li>
+              <a
+                href="https://en.wikipedia.org/wiki/Subhas_Chandra_Bose#1937%E2%80%931940:_Indian_National_Congress"
+                >1937–1940: Indian National Congress</a
+              >
+            </li>
+            <li>
+              <a
+                href="https://en.wikipedia.org/wiki/Subhas_Chandra_Bose#1941:_Escape_to_Nazi_Germany"
+                >1941: Escape to Nazi Germany</a
+              >
+            </li>
+            <li>
+              <a
+                href="https://en.wikipedia.org/wiki/Subhas_Chandra_Bose#1941%E2%80%931943:_Collaboration_with_Nazi_Germany"
+                >1941–1943: Collaboration with Nazi Germany</a
+              >
+            </li>
+            <li>
+              <a
+                href="https://en.wikipedia.org/wiki/Subhas_Chandra_Bose#1943%E2%80%931945:_Japanese-occupied_Asia"
+                >1943–1945: Japanese-occupied Asia</a
+              >
+            </li>
+            <li>
+              <a
+                href="https://en.wikipedia.org/wiki/Subhas_Chandra_Bose#18_August_1945:_Death"
+                >18 August 1945: Death</a
+              >
+            </li>
+          </ul>
+        </section>
+        <section class="footer">
+          <div>
+            <p>
+              For more information about Netaji go to
+              <a href="https://en.wikipedia.org/wiki/Subhas_Chandra_Bose#"
+                >wikipedia</a
+              >
+            </p>
+          </div>
+          <h4>Thankyou visit again... bharat bhati</h4>
+        </section>
+      </div>
     </div>
-</body>
+  </body>
 </html>
